Fix package.json project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yti-terminology-ui",
+  "name": "yti-datamodel-ui",
   "version": "1.0.0",
   "description": "Interoperability workbench user interface seed.",
   "license": "EUPL-1.1",
