--- a/nginx.conf
+++ b/nginx.conf
@@ -28,10 +28,11 @@ http {
         server_name "";
 
         root /app/public;
-        index index.html; 
+        index index.html;
 
         location / {
             try_files $uri /index.html;
+            expires off;
         }
 
         ## Cache assets
