--- a/package.json
+++ b/package.json
@@ -24,6 +24,16 @@
   },
   "homepage": "https://github.com/VRK-YTI/yti-datamodel-ui#readme",
   "dependencies": {
+    "@angular/common": "4.1.1",
+    "@angular/compiler": "4.1.1",
+    "@angular/core": "4.1.1",
+    "@angular/forms": "4.1.1",
+    "@angular/http": "4.1.1",
+    "@angular/platform-browser": "4.1.1",
+    "@angular/platform-browser-dynamic": "4.1.1",
+    "@angular/router": "4.1.1",
+    "@angular/upgrade": "4.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.7",
     "angular": "1.6.0",
     "angular-animate": "1.5.7",
     "angular-gettext": "2.3.0",
@@ -47,8 +57,10 @@
     "node-uuid": "1.4.7",
     "please-wait": "0.0.5",
     "proxy-polyfill": "0.1.6",
+    "rxjs": "5.1.0",
     "uri-js": "2.1.1",
-    "webcola": "3.1.3"
+    "webcola": "3.1.3",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@types/angular": "1.5.13",
