--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jsonld": "0.4.11",
     "lodash": "4.14.2",
     "moment": "2.13.0",
+    "ng2-translate": "^5.0.0",
     "ngclipboard": "1.1.1",
     "node-uuid": "1.4.7",
     "please-wait": "0.0.5",
@@ -60,6 +61,7 @@
     "rxjs": "5.1.0",
     "uri-js": "2.1.1",
     "webcola": "3.1.3",
+    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git#2f9ef6f0d041c281d2c328928e4e1def0f992ed1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
