Start using styles and components from yti common
Work is still majorly in progress and styles are broken in all places.

--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "angular-gettext": "2.3.0",
     "angular-messages": "1.5.7",
     "angular-route": "1.5.7",
-    "angular-ui-bootstrap": "2.4.0",
-    "bootstrap-sass": "3.3.7",
+    "bootstrap": "4.0.0-beta.2",
     "change-case": "3.0.0",
     "checklist-model": "0.9.0",
     "core-js": "2.4.0",
@@ -59,9 +58,10 @@
     "please-wait": "0.0.5",
     "proxy-polyfill": "0.1.6",
     "rxjs": "5.1.0",
+    "ui-bootstrap4": "^3.0.0",
     "uri-js": "2.1.1",
     "webcola": "3.1.3",
-    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git#2f9ef6f0d041c281d2c328928e4e1def0f992ed1",
+    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git#d54363c64c4762f84937522251c75ccf9d4ae85f",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
@@ -95,6 +95,7 @@
     "codelyzer": "3.0.0",
     "css-loader": "0.23.1",
     "enhanced-resolve": "2.3.0",
+    "exports-loader": "^0.6.4",
     "file": "0.2.2",
     "file-loader": "0.8.5",
     "html-webpack-plugin": "2.21.0",
