--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "jquery-mousewheel": "3.1.13",
     "jsonld": "0.4.12",
     "lodash": "4.14.2",
-    "moment": "2.13.0",
+    "moment": "^2.21.0",
     "ng2-translate": "^5.0.0",
     "ngclipboard": "1.1.1",
     "node-uuid": "1.4.7",
