--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "ui-bootstrap4": "^3.0.0",
     "uri-js": "2.1.1",
     "webcola": "3.1.3",
-    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git#8f51962ff23da1955f611aa207c84e4f35064dce",
+    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git/#8f51962ff23da1955f611aa207c84e4f35064dce",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
