--- a/nginx.conf
+++ b/nginx.conf
@@ -28,15 +28,15 @@ http {
         server_name "";
 
         root /app/public;
-        index index.html;
 
         location / {
             try_files $uri /index.html;
             expires off;
+            add_header Cache-Control 'no-cache';
         }
 
         ## Cache assets
-        location ~* ^.+\.(?:css|cur|js|jpe?g|gif|htc|ico|png|html|xml|otf|ttf|eot|woff|svg)$ {
+        location ~* ^.+\.(?:css|cur|js|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|svg)$ {
             expires 30d;
         }
 
