--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "4.1.1",
     "@angular/router": "4.1.1",
     "@angular/upgrade": "4.1.1",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.7",
     "angular": "1.6.0",
     "angular-animate": "1.5.7",
@@ -45,7 +46,6 @@
     "core-js": "2.4.0",
     "css.escape": "1.5.1",
     "fast-levenshtein": "2.0.5",
-    "font-awesome": "4.7.0",
     "jointjs": "1.0.3",
     "jquery": "3.1.0",
     "jquery-mousewheel": "3.1.13",
