--- a/package.json
+++ b/package.json
@@ -24,26 +24,28 @@
   },
   "homepage": "https://github.com/VRK-YTI/yti-datamodel-ui#readme",
   "dependencies": {
-    "@angular/common": "4.1.1",
-    "@angular/compiler": "4.1.1",
-    "@angular/core": "4.1.1",
-    "@angular/forms": "4.1.1",
-    "@angular/http": "4.1.1",
-    "@angular/platform-browser": "4.1.1",
-    "@angular/platform-browser-dynamic": "4.1.1",
-    "@angular/router": "4.1.1",
-    "@angular/upgrade": "4.1.1",
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "@angular/upgrade": "^6.1.0",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.7",
+    "@ng-bootstrap/ng-bootstrap": "2.2.2",
+    "@ngx-translate/core": "^10.0.2",
     "angular": "1.6.0",
     "angular-animate": "1.5.7",
     "angular-gettext": "2.3.0",
     "angular-messages": "1.5.7",
     "angular-route": "1.5.7",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "4.1.3",
     "change-case": "3.0.0",
     "checklist-model": "0.9.0",
-    "core-js": "2.4.0",
+    "core-js": "^2.5.4",
     "css.escape": "1.5.1",
     "fast-levenshtein": "2.0.5",
     "jointjs": "1.0.3",
@@ -51,20 +53,24 @@
     "jquery-mousewheel": "3.1.13",
     "jsonld": "0.4.12",
     "lodash": "4.14.2",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.21.0",
-    "ng2-translate": "^5.0.0",
     "ngclipboard": "1.1.1",
     "node-uuid": "1.4.7",
     "please-wait": "0.0.5",
     "proxy-polyfill": "0.1.6",
-    "rxjs": "5.1.0",
+    "rxjs": "^6.0.0",
     "ui-bootstrap4": "^3.0.0",
     "uri-js": "2.1.1",
     "webcola": "3.1.3",
-    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git/#1b1fbb36b67fa9ef28bd1582389f9f9b773b94ed",
-    "zone.js": "^0.8.18"
+    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git/#0f7292f107758f4ac177354bd7a2d5aca22df6ab",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "~6.1.4",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
     "@types/angular": "1.5.13",
     "@types/angular-animate": "1.5.4",
     "@types/angular-gettext": "2.1.29",
@@ -80,19 +86,20 @@
     "@types/karma-jasmine": "0.0.27",
     "@types/lodash": "4.14.88",
     "@types/modernizr": "3.2.26",
-    "@types/node": "6.0.60",
+    "@types/node": "~8.9.4",
     "@types/node-uuid": "file:./types/node-uuid",
     "@types/protractor": "1.5.18",
     "@types/selenium-webdriver": "2.44.28",
     "@types/webcola": "file:./types/webcola",
     "@types/webpack": "2.2.16",
     "@types/webpack-dev-server": "2.9.2",
+    "@types/webpack-env": "^1.13.6",
     "add-asset-html-webpack-plugin": "1.0.2",
     "angular-gettext-tools": "2.2.2",
     "angular2-template-loader": "^0.6.2",
     "assets-webpack-plugin": "3.4.0",
     "chalk": "1.1.3",
-    "codelyzer": "3.0.0",
+    "codelyzer": "~4.2.1",
     "css-loader": "0.23.1",
     "enhanced-resolve": "2.3.0",
     "exports-loader": "^0.6.4",
@@ -123,11 +130,11 @@
     "strip-sourcemap-loader": "0.0.1",
     "style-loader": "0.13.1",
     "ts-loader": "^3.2.0",
-    "ts-node": "1.7.0",
+    "ts-node": "~5.0.1",
     "tsconfig-paths": "^2.6.0",
-    "tslint": "5.1.0",
+    "tslint": "~5.9.1",
     "tslint-loader": "^3.5.3",
-    "typescript": "2.3.1",
+    "typescript": "~2.7.2",
     "url-loader": "0.5.7",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.9.7"
