--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "../out-tsc/app",
     "types": [
       "webpack-env",
-      "Modernizr"
+      "modernizr"
     ],
     "baseUrl": "",
     "paths": {
