--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/node": "~8.9.4",
     "@types/uuid": "2.0.29",
     "@types/webpack-env": "^1.13.6",
+    "ngx-clipboard": "^11.1.9",
     "codelyzer": "~4.2.1",
     "http-status-to-description": "0.0.1",
     "imports-loader": "0.6.5",
