--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "ngclipboard": "1.1.1",
     "please-wait": "0.0.5",
     "proxy-polyfill": "0.3.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "~6.3.3",
     "ui-bootstrap4": "^3.0.0",
     "uri-js": "4.2.2",
     "uuid": "3.0.1",
     "webcola": "3.3.8",
-    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git/#486703211d72a2e4859a693381c68d0db0b73002",
+    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git/#3ddebcdae6a6c341e36eed5a800e93774944e2e9",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
