--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angular-gettext": "2.4.1",
     "angular-messages": "1.7.3",
     "angular-route": "1.7.3",
+    "angular-sanitize": "~1.7.8",
     "bootstrap": "4.1.3",
     "change-case": "3.0.0",
     "checklist-model": "0.9.0",
