--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.21.0",
     "ngclipboard": "1.1.1",
+    "ngx-virtual-scroller": "^3.0.2",
     "please-wait": "0.0.5",
     "proxy-polyfill": "0.3.0",
     "rxjs": "~6.3.3",
