--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "src/styles/loading.scss",
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "node_modules/simple-line-icons/scss/simple-line-icons.scss"
             ],
             "scripts": [
               "src/vendor/modernizr.js"
@@ -79,7 +80,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/simple-line-icons/scss/simple-line-icons.scss"
             ],
             "scripts": [],
             "assets": [
