YTI-934: Adding support for X-Robots-Tag: none header for DEV and TEST environments.

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,11 @@ http {
     keepalive_timeout 65;
     gzip on;
 
+    map $http_host $robots {
+        default "";
+        "~*.yti.cloud.vrk.fi" "none";
+    }
+
     server {
         listen 80;
         server_name "";
@@ -35,6 +40,7 @@ http {
             ## Disable index.html cache
             expires off;
             add_header Cache-Control 'no-cache';
+            add_header X-Robots-Tag $robots;
         }
 
         ## Cache assets
