--- a/nginx-docker-local.conf
+++ b/nginx-docker-local.conf
@@ -37,8 +37,8 @@ http {
             add_header Cache-Control 'no-cache';
         }
 
-        location /api/ {
-            proxy_pass http://yti-datamodel-api:8084/api/;
+        location /datamodel-api/ {
+            proxy_pass http://yti-datamodel-api:9302/datamodel-api/;
         }
 
         ## Cache assets
