--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "node -- node_modules/@angular/cli/bin/ng",
     "ts-node": "node -- node_modules/ts-node/dist/bin.js -P scripts/tsconfig.script.json --skip-ignore",
     "start": "ng serve --port 9000 --proxy-config proxy.conf.json",
-    "start-dev": "ng serve --port 9000 --proxy-config proxy-dev.conf.json --ssl true",
+    "start-dev": "ng serve --port 19000 --proxy-config proxy-dev.conf.json --ssl true",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -59,7 +59,7 @@
     "uri-js": "4.2.2",
     "uuid": "3.0.1",
     "webcola": "3.3.8",
-    "yti-common-ui": "https://github.com/VRK-YTI/yti-common-ui.git/#c4d62bf3a66b30dcf20eb8798541bdc74e618132",
+    "yti-common-ui": "https://github.com/zigc/yti-common-ui",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
